--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -18,15 +18,21 @@ body {
   
   main {
     align-items: center;
-    animation: grow0 1.5s forwards;
+    //animation: grow0 1.5s forwards;
     border-radius: 15px;
     display: flex;
+    
     flex-direction: column;
+    justify-content: center;
     max-width: 650px;
+    min-height: 100vh;
     min-height: 250px;
     min-width: 250px;
     padding: 20px;
     text-align: center;
+
+
+    
   }
   /*Animate width to 100%*/
   @keyframes grow0 {
@@ -137,4 +143,10 @@ body {
     font-size: larger;
     font-weight: $weight-bold;
     line-height: 1.5em;
+  }
+
+// responsive image
+.img-responsive {
+    height: auto;
+    max-width: 100%;
   }
