--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -180,3 +180,43 @@ body {
       }
     }
   }
+
+  //loading animation
+.spinner {
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+
+  .line {
+    animation: 2156ms spinner-arc ease-in-out infinite,
+      1829ms spinner-rotate linear infinite;
+    fill: none;
+    opacity: $line-alpha;
+    stroke: $line-color;
+    stroke-linecap: round;
+    stroke-width: $ring-size;
+    transform: rotate3d(0, 0, 1, 0deg);
+    transform-origin: 50% 50%;
+  }
+  .ring {
+    fill: none;
+    opacity: $ring-alpha;
+    stroke: $ring-color;
+    stroke-width: $ring-size;
+  }
+}
+@keyframes spinner-rotate {
+  to {
+    transform: rotate3d(0, 0, 1, 360deg);
+  }
+}
+@keyframes spinner-arc {
+  from {
+    stroke-dasharray: 0 150;
+    stroke-dashoffset: 0;
+  }
+  to {
+    stroke-dasharray: 100 150;
+    stroke-dashoffset: -140;
+  }
+}
