--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,7 +3,7 @@
     font-family: $family-primary;
   }
 body {
-    align-items: center;
+    align-items: flex-start;
     background: $beige;
     background-image: url('blob-blue.png'), url('blob-yellow.png');
     background-position: left bottom, right top;
@@ -14,16 +14,28 @@ body {
     justify-content: center;
     margin: 0;
     min-height: 100vh;
+    #root{
+      width: 100%;
+    }
   }
-  
-  main {
+  header{
+    background:white;
+    border-bottom:solid 4px $dark;
+    padding: 20px;
+    text-align:center;
+    h1{
+      margin: 0;
+    }
+  }
+  .content {
     align-items: center;
-    //animation: grow0 1.5s forwards;
+    animation: grow0 1.5s forwards;
     border-radius: 15px;
     display: flex;
     
     flex-direction: column;
     justify-content: center;
+    margin:0 auto;
     max-width: 650px;
     min-height: 100vh;
     min-height: 250px;
